--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,4 +74,10 @@ ManualIPAddress=
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.BrilliantSole.Unreal
 ApplicationDisplayName=Brilliant Sole Demo
+Orientation=Portrait
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+bSupportsPortraitOrientation=True
+bSupportsLandscapeLeftOrientation=False
+bSupportsLandscapeRightOrientation=False
 
