--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ ProjectID=11010B6A6D482FC7DEE16E8663581868
 ProjectName=Brilliant Sole Unreal
 CompanyName=Brilliant Sole
 Homepage="http://brilliantsole.com/"
-CopyrightNotice=Copyright 2024 Zack Qattan @ Brilliant Sole. All Rights Reserves
+CopyrightNotice=Copyright 2024 Zack Qattan @ Brilliant Sole. All Rights Reserved
 Description=Sample Project using the Brilliant Sole Unreal SDK
 
 [/Script/Engine.AssetManagerSettings]
