--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,6 +75,8 @@ ManualIPAddress=
 PackageName=com.BrilliantSole.Unreal
 ApplicationDisplayName=Brilliant Sole Demo
 Orientation=Portrait
+MinSDKVersion=26
+TargetSDKVersion=31
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=True
