--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,8 @@ r.DefaultFeature.Bloom=False
 r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=1
 r.DefaultFeature.AutoExposure=True
+r.Mobile.AntiAliasing=1
+r.TextureStreaming=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
