--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,4 +99,16 @@ TargetSDKVersion=31
 bSupportsPortraitOrientation=True
 bSupportsLandscapeLeftOrientation=False
 bSupportsLandscapeRightOrientation=False
+FrameRateLock=PUFRL_30
+MobileProvision=5124f0f3-cf37-4201-b783-d0149779ddc0.mobileprovision
+SigningCertificate=Apple Development: Zack Qattan (AP942262B9)
+BundleDisplayName=Brilliant Sole Unreal Engine Demo
+BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
+BundleName=UnrealEngineDemo
+bAutomaticSigning=False
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+bUseAppStoreConnect=True
+bMacSignToRunLocally=True
+bUseModernXcode=False
 
