--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,15 +100,21 @@ bSupportsPortraitOrientation=True
 bSupportsLandscapeLeftOrientation=False
 bSupportsLandscapeRightOrientation=False
 FrameRateLock=PUFRL_30
-MobileProvision=5124f0f3-cf37-4201-b783-d0149779ddc0.mobileprovision
-SigningCertificate=Apple Development: Zack Qattan (AP942262B9)
+MobileProvision=
+SigningCertificate=Apple Development: Zack Qattan (CVQVYPW3FU)
 BundleDisplayName=Brilliant Sole Unreal Engine Demo
 BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
-BundleName=UnrealEngineDemo
-bAutomaticSigning=False
+BundleName=unrealenginedemo
+bAutomaticSigning=True
+IOSTeamID=
+AdditionalPlistData=<key>NSBluetoothAlwaysUsageDescription</key>\n<string>We need access to Bluetooth to communicate with devices.</string>\n<key>NSBluetoothPeripheralUsageDescription</key>\n<string>We need access to Bluetooth to communicate with devices.</string>
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
-bUseAppStoreConnect=True
+bUseAppStoreConnect=False
 bMacSignToRunLocally=True
-bUseModernXcode=False
+bUseModernXcode=True
+CodeSigningTeam=KT7J75V2U8
+CodeSigningPrefix=
+BundleIdentifier=com.brilliantsole.unrealenginedemo
+AppCategory=public.app-category.games
 
