--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -67,7 +67,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=False
+bCookMapsOnly=True
 bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyDenylist=KeyStorePassword
@@ -108,4 +108,5 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="SampleMap")
 
