--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,7 +107,7 @@ BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
 BundleName=unrealenginedemo
 bAutomaticSigning=True
 IOSTeamID=
-AdditionalPlistData=<key>NSBluetoothAlwaysUsageDescription</key>\n<string>We need access to Bluetooth to communicate with devices.</string>\n<key>NSBluetoothPeripheralUsageDescription</key>\n<string>We need access to Bluetooth to communicate with devices.</string>
+AdditionalPlistData=
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 bUseAppStoreConnect=False
