--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,6 +108,7 @@ BundleName=unrealenginedemo
 bAutomaticSigning=True
 IOSTeamID=
 AdditionalPlistData=
+bGenerateXCArchive=True
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 bUseAppStoreConnect=False
@@ -117,4 +118,7 @@ CodeSigningTeam=KT7J75V2U8
 CodeSigningPrefix=
 BundleIdentifier=com.brilliantsole.unrealenginedemo
 AppCategory=public.app-category.games
+AppStoreConnectIssuerID=
+AppStoreConnectKeyID=
+AppStoreConnectKeyPath=(FilePath="")
 
