--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,7 +107,7 @@ BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
 BundleName=unrealenginedemo
 bAutomaticSigning=True
 IOSTeamID=
-AdditionalPlistData=
+AdditionalPlistData=<key>NSCameraUsageDescription</key><string>Not sure why, but we also need to use the camera</string>
 bGenerateXCArchive=True
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
