--- a/BrilliantSole_Unreal.uproject
+++ b/BrilliantSole_Unreal.uproject
@@ -22,6 +22,10 @@
 			"Name": "BleGoodies",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/9ad1594e91da4da1aa72fb617697c9f7"
+		},
+		{
+			"Name": "UDPWrapper",
+			"Enabled": false
 		}
 	]
 }
