--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,19 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/BrilliantSoleSDK/Sample/SampleMap.SampleMap
+EditorStartupMap=/BrilliantSoleSDK/Sample/BS_SampleLevel.BS_SampleLevel
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/BrilliantSoleSDK/Sample/BS_SampleLevel.BS_SampleLevel
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/BrilliantSoleSDK/Sample/SampleMap.SampleMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/BrilliantSoleSDK/Sample/SampleGameMode.SampleGameMode_C
-GlobalDefaultServerGameMode=None
+GameDefaultMap=/BrilliantSoleSDK/Sample/BS_SampleLevel.BS_SampleLevel
+ServerDefaultMap=/BrilliantSoleSDK/Sample/BS_SampleLevel.BS_SampleLevel
+GlobalDefaultGameMode=/BrilliantSoleSDK/Sample/BS_SampleGameMode.BS_SampleGameMode_C
+GlobalDefaultServerGameMode=/BrilliantSoleSDK/Sample/BS_SampleGameMode.BS_SampleGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -91,7 +91,7 @@ ManualIPAddress=
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.BrilliantSole.Unreal
 ApplicationDisplayName=Brilliant Sole Demo
-Orientation=Portrait
+Orientation=FullSensor
 MinSDKVersion=26
 TargetSDKVersion=31
 
