--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -67,7 +67,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=True
+bCookMapsOnly=False
 bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyDenylist=KeyStorePassword
@@ -108,5 +108,4 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="SampleMap")
 
