--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -180,3 +180,6 @@ AppStoreConnectKeyPath=(FilePath="")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=False
+
