--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,7 +107,7 @@ BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
 BundleName=unrealenginedemo
 bAutomaticSigning=True
 IOSTeamID=
-AdditionalPlistData=<key>NSCameraUsageDescription</key><string>Not sure why, but we also need to use the camera</string>
+AdditionalPlistData=
 bGenerateXCArchive=True
 bSupportsUpsideDownOrientation=False
 
