--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,14 +100,14 @@ bSupportsPortraitOrientation=True
 bSupportsLandscapeLeftOrientation=True
 bSupportsLandscapeRightOrientation=True
 FrameRateLock=PUFRL_30
-MobileProvision=
-SigningCertificate=Apple Development: Zack Qattan (CVQVYPW3FU)
+MobileProvision=97d4830e-736c-4338-85cc-ac154f69d747.mobileprovision
+SigningCertificate=Apple Distribution: Brilliant Sole Inc. (KT7J75V2U8)
 BundleDisplayName=Brilliant Sole Unreal Engine Demo
 BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
-BundleName=unrealenginedemo
+BundleName=Brilliant Sole Unreal Demo
 bAutomaticSigning=True
-IOSTeamID=
-AdditionalPlistData=
+IOSTeamID=KT7J75V2U8
+AdditionalPlistData=<key>NSCameraUsageDescription</key><string>Not sure why, but we also need to use the camera</string><key>CFBundleURLTypes</key>    <array>        <dict>            <key>CFBundleURLSchemes</key>            <array>                <string>BrilliantSoleUnreal</string>            </array>        </dict>    </array>
 bGenerateXCArchive=True
 bSupportsUpsideDownOrientation=False
 
@@ -122,6 +122,7 @@ AppCategory=public.app-category.games
 AppStoreConnectIssuerID=
 AppStoreConnectKeyID=
 AppStoreConnectKeyPath=(FilePath="")
+TemplateIOSPlist=(FilePath="/Game/Build/IOS/UBTGenerated/Info.Template.plist")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
