--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,7 +101,7 @@ bSupportsLandscapeLeftOrientation=True
 bSupportsLandscapeRightOrientation=True
 FrameRateLock=PUFRL_30
 MobileProvision=97d4830e-736c-4338-85cc-ac154f69d747.mobileprovision
-SigningCertificate=Apple Distribution: Brilliant Sole Inc. (KT7J75V2U8)
+SigningCertificate=Apple Development: Zack Qattan (CVQVYPW3FU)
 BundleDisplayName=Brilliant Sole Unreal Engine Demo
 BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
 BundleName=Brilliant Sole Unreal Demo
