--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -114,7 +114,7 @@ bSupportsUpsideDownOrientation=False
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 bUseAppStoreConnect=False
 bMacSignToRunLocally=True
-bUseModernXcode=True
+bUseModernXcode=False
 CodeSigningTeam=KT7J75V2U8
 CodeSigningPrefix=
 BundleIdentifier=com.brilliantsole.unrealenginedemo
