--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,8 +100,8 @@ bSupportsPortraitOrientation=True
 bSupportsLandscapeLeftOrientation=True
 bSupportsLandscapeRightOrientation=True
 FrameRateLock=PUFRL_30
-MobileProvision=97d4830e-736c-4338-85cc-ac154f69d747.mobileprovision
-SigningCertificate=Apple Development: Zack Qattan (CVQVYPW3FU)
+MobileProvision=ad1fb0e0-2121-4aa0-9e39-95536ce34cce.mobileprovision
+SigningCertificate=Apple Development: zack@brilliantsole.com (76W4N8MYU8)
 BundleDisplayName=Brilliant Sole Unreal Engine Demo
 BundleIdentifier=com.BrilliantSole.UnrealEngineDemo
 BundleName=Brilliant Sole Unreal Demo
